--- a/MyTest/MyTest.csproj
+++ b/MyTest/MyTest.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tasks\ParallelDemo.cs" />
+    <Compile Include="Tasks\TaskDemo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
